day04 수업 자료 업로드

--- a/day3/상품리스트.html
+++ b/day3/상품리스트.html
@@ -19,7 +19,7 @@
 
         /* 상품 박스 */
         li{
-            border: 1px solid black;
+            border: 1px solid black;S
             width: 300px;
             height: 300px;
             text-align: center; 
